--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,10 @@ __history
 *.map
 *.exe
 *.dll
-bin/*
+bin
+cs_wpf/MU_Puzzle_WPF/bin
+cs_wpf/MU_Puzzle_WPF/obj
+oxygene/Backup
+oxygene/obj/
+*.dsk
+*.~dsk
