added more files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,23 @@
+*.dsk
+*.~dsk
 *.dcu
 *.~*~
 *.local
 *.identcache
-__history
 *.drc
 *.map
 *.exe
 *.dll
-bin
+*.sln
+*.suo
+*.zip
+desktop.ini
+__history
 cs_wpf/MU_Puzzle_WPF/bin
 cs_wpf/MU_Puzzle_WPF/obj
 oxy_wpf/MU_Puzzle_OxyWPF/obj
-*.dsk
-*.~dsk
-oxygene_class_attempt.zip
-desktop.ini
+oxy_wpf/MU_Puzzle_OxyWPF/bin
+oxy_wpf/MU_Puzzle_OxyWPF2/obj
+oxy_wpf/MU_Puzzle_OxyWPF2/bin
+oxy_WinRT/MU_Puzzle_WinRT/obj
+oxy_WinRT/MU_Puzzle_WinRT/bin
