added a couple bin folders

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ oxy_wpf/MU_Puzzle_OxyWPF2/obj
 oxy_wpf/MU_Puzzle_OxyWPF2/bin
 oxy_WinRT/MU_Puzzle_WinRT/obj
 oxy_WinRT/MU_Puzzle_WinRT/bin
+oxy_WinRT/MU_Puzzle_WinPhone/obj
+oxy_WinRT/MU_Puzzle_WinPhone/bin
