added WPF3 folders
added bin and obj folders under MU_Puzzle_OxyWPF3 to the ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ oxy_wpf/MU_Puzzle_OxyWPF/obj
 oxy_wpf/MU_Puzzle_OxyWPF/bin
 oxy_wpf/MU_Puzzle_OxyWPF2/obj
 oxy_wpf/MU_Puzzle_OxyWPF2/bin
+oxy_wpf/MU_Puzzle_OxyWPF3/obj
+oxy_wpf/MU_Puzzle_OxyWPF3/bin
 oxy_WinRT/MU_Puzzle_WinRT/obj
 oxy_WinRT/MU_Puzzle_WinRT/bin
 oxy_WinPhone/MU_Puzzle_WinPhone/obj
