added another project path

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ oxy_MultiPlatform/MU_PuzzleLib/MU_PuzzleClasses/bin
 oxy_MultiPlatform/MU_PuzzleLib/MU_PuzzleClasses/obj
 oxy_MultiPlatform/MU_PuzzleWPF/bin
 oxy_MultiPlatform/MU_PuzzleWPF/obj
+mupuzzle/oxy_MultiPlatform/MU_PuzzleWin8/bin
+mupuzzle/oxy_MultiPlatform/MU_PuzzleWin8/obj
