added class bin, obj folders

--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,6 @@ oxy_MultiPlatform/MU_PuzzleWinPhone8/obj/x86
 oxy_MultiPlatform/MU_PuzzleWinPhone8/obj/x86/Debug
 oxy_MultiPlatform/MU_PuzzleWinPhone8/obj/Debug
 oxy_MultiPlatform/MU_PuzzlePhoneClass/obj/x86/Debug
+oxy_MultiPlatform/MU_PuzzlePhoneClass/Bin/ARM/Debug
+oxy_MultiPlatform/MU_PuzzlePhoneClass/obj/ARM/Debug
 
